--- a/package.json
+++ b/package.json
@@ -11,9 +11,21 @@
   },
   "dependencies": {
     "@react-native/new-app-screen": "0.80.1",
+    "@react-navigation/bottom-tabs": "^7.4.5",
+    "@react-navigation/elements": "^2.6.2",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.24",
+    "@react-three/fiber": "^9.3.0",
+    "expo-gl": "^15.1.7",
     "react": "19.1.0",
     "react-native": "0.80.1",
-    "react-native-rename": "^3.2.17"
+    "react-native-asset": "^2.1.1",
+    "react-native-rename": "^3.2.17",
+    "react-native-safe-area-context": "^5.6.0",
+    "react-native-screens": "^4.13.1",
+    "react-native-svg": "^15.12.1",
+    "react-native-svg-transformer": "^1.5.1",
+    "three": "^0.179.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -29,6 +41,7 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
