--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^7.3.24",
     "@react-three/fiber": "^9.3.0",
     "expo-gl": "^15.1.7",
+    "lottie-react-native": "^7.3.1",
     "react": "19.1.0",
     "react-native": "0.80.1",
     "react-native-asset": "^2.1.1",
