--- a/ios/NativeVision/Info.plist
+++ b/ios/NativeVision/Info.plist
@@ -22,10 +22,6 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>This app needs access to your photos to let you choose profile pictures.</string>
-	<key>NSCameraUsageDescription</key>
-	<string>This app needs access to your camera to let you take a pictures.</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -35,10 +31,26 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>This app needs access to your camera to let you take a pictures.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs access to your photos to let you choose profile pictures.</string>
 	<key>RCTNewArchEnabled</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>NotoSansJP-Black.ttf</string>
+		<string>NotoSansJP-Bold.ttf</string>
+		<string>NotoSansJP-ExtraBold.ttf</string>
+		<string>NotoSansJP-ExtraLight.ttf</string>
+		<string>NotoSansJP-Light.ttf</string>
+		<string>NotoSansJP-Medium.ttf</string>
+		<string>NotoSansJP-Regular.ttf</string>
+		<string>NotoSansJP-SemiBold.ttf</string>
+		<string>NotoSansJP-Thin.ttf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -53,17 +65,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>UIAppFonts</key>
-	<array>
-		<string>NotoSansJP-Black.ttf</string>
-		<string>NotoSansJP-Bold.ttf</string>
-		<string>NotoSansJP-ExtraBold.ttf</string>
-		<string>NotoSansJP-ExtraLight.ttf</string>
-		<string>NotoSansJP-Light.ttf</string>
-		<string>NotoSansJP-Medium.ttf</string>
-		<string>NotoSansJP-Regular.ttf</string>
-		<string>NotoSansJP-SemiBold.ttf</string>
-		<string>NotoSansJP-Thin.ttf</string>
-	</array>
 </dict>
 </plist>
