--- a/package.json
+++ b/package.json
@@ -10,23 +10,29 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^23.0.0",
+    "@react-native-firebase/auth": "^23.0.0",
     "@react-native/new-app-screen": "0.80.1",
     "@react-navigation/bottom-tabs": "^7.4.5",
     "@react-navigation/elements": "^2.6.2",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.24",
     "@react-three/fiber": "^9.3.0",
+    "axios": "^1.11.0",
     "expo-gl": "^15.1.7",
     "lottie-react-native": "^7.3.1",
     "react": "19.1.0",
     "react-native": "0.80.1",
     "react-native-asset": "^2.1.1",
+    "react-native-config": "^1.5.6",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-rename": "^3.2.17",
     "react-native-safe-area-context": "^5.6.0",
     "react-native-screens": "^4.13.1",
     "react-native-svg": "^15.12.1",
     "react-native-svg-transformer": "^1.5.1",
-    "three": "^0.179.1"
+    "three": "^0.179.1",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
